--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="@fubaobaoxian/cordova-plugin-ali-voice-interaction" version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0"
+<plugin id="@fubaobaoxian/cordova-plugin-ali-voice-interaction" version="1.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android">
     <name>AliVoiceInteraction</name>
     <js-module name="AliVoiceInteraction" src="www/AliVoiceInteraction.js">
@@ -61,6 +61,9 @@
 
         <framework src="AudioToolbox.framework"/>
         <framework src="AdSupport.framework"/>
+        <framework src="SystemConfiguration.framework"/>
+        <framework src="Security.framework"/>
+        <framework src="CFNetwork.framework"/>
         <framework src="libiconv.tbd"/>
         <framework  custom="true" src="libs/ios/nuisdk.framework"/>
         <resource-file src="libs/ios/nuisdk.framework/Resources.bundle"/>
